--- a/src/index.css
+++ b/src/index.css
@@ -4,12 +4,18 @@ body, html {
   height: 100%;
  
 }
+
 .fd-nav{
   background-image: linear-gradient(105.7deg, rgba(255, 64, 65, 1) 45.8%, rgba(255, 10, 11, 1) 62.4%);
   width: 100%;
   backdrop-filter: blur(5px);
   position: fixed;
   z-index: 10;
+}
+.blur{
+  filter: blur(5px);
+  width: 100% !important;
+  height: 100% !important;
 }
 .video-bg {
   position: absolute;
