--- a/src/index.css
+++ b/src/index.css
@@ -129,3 +129,13 @@ body, html {
       transform: rotate(-360deg);
   }
 }
+
+.logotxt{
+  background-image: linear-gradient(105.7deg, rgba(255, 64, 65, 1) 45.8%, rgba(255, 10, 11, 1) 62.4%);
+  -webkit-background-clip: text;
+  color: transparent;
+}
+
+.minilogotxt{
+
+}
