--- a/src/index.css
+++ b/src/index.css
@@ -136,11 +136,17 @@ position: relative;
   -webkit-background-clip: text;
   color: transparent;
 }
-
-.minilogotxt{
-
-}
 .scnd-content{
-  margin-top: 600px;
+  margin-top: 200px;
 }
-  
+.menu-img{
+  border-radius: 50%;
+  box-shadow: 0px 0px 15px black;
+} 
+.prod-btn{
+  background-image: linear-gradient(105.7deg, rgba(255, 64, 65, 1) 45.8%, rgba(255, 10, 11, 1) 62.4%);
+  border-radius: 5px;
+  padding: 7px;
+  width: 170px;
+ 
+}
