--- a/src/index.css
+++ b/src/index.css
@@ -150,3 +150,8 @@ position: relative;
   width: 170px;
  
 }
+
+.cart-bg{
+  background-image: linear-gradient(105.7deg, rgba(255, 64, 65, 1) 45.8%, rgba(255, 10, 11, 1) 62.4%);
+
+}
