--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body, html {
 position: relative;
   margin: 0;
@@ -154,4 +160,17 @@ position: relative;
 .cart-bg{
   background-image: linear-gradient(105.7deg, rgba(255, 64, 65, 1) 45.8%, rgba(255, 10, 11, 1) 62.4%);
 
+}
+.stars i {
+  color: gold;
+  margin-right: 2px;
+}
+
+
+
+.card-img-top {
+ 
+  width: 200px;
+  height: 100px;
+  
 }
