--- a/src/index.css
+++ b/src/index.css
@@ -1,38 +1,41 @@
-*{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
+body,
+html {
 
-body, html {
-position: relative;
   margin: 0;
   padding: 0;
+  width: 100%;
   height: 100%;
- 
+
 }
 
-.fd-nav{
-  background-image: linear-gradient(105.7deg, rgba(255, 64, 65, 1) 45.8%, rgba(255, 10, 11, 1) 62.4%);
+.fd-nav {
+  /* background-image: linear-gradient(105.7deg, rgba(255, 64, 65, 1) 45.8%, rgba(255, 10, 11, 1) 62.4%); */
   width: 100%;
   backdrop-filter: blur(5px);
   position: fixed;
   z-index: 10;
+  background: linear-gradient(to bottom,
+      rgba(0, 0, 0, 0.1) 0%,
+      rgba(0, 0, 0, 0.1) 50%,
+      rgba(0, 0, 0, 0.2) 100%);
 }
-.blur{
+
+.blur {
   filter: blur(5px);
   width: 100% !important;
   height: 100% !important;
 }
+
 .video-bg {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;     
-  height: 100%;     
-  object-fit: cover; 
-  z-index: 1;      
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: 1;
 }
+
 .video-container::before {
   content: '';
   position: absolute;
@@ -40,137 +43,229 @@ position: relative;
   left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.9)); /* Black gradient */
-  z-index: 2; /* Ensure the gradient is above the video */
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.9));
+  z-index: 2;
 }
-.fd-content{
+
+.fd-content {
   position: relative;
   z-index: 5;
   width: 100%;
-  top: 100px !important; 
+  top: 100px !important;
 }
-.icn{
+
+.icn {
   color: rgb(255, 213, 0);
 }
-.fd-btn{
+
+.fd-btn {
   background-image: linear-gradient(105.7deg, rgba(255, 64, 65, 1) 45.8%, rgba(255, 10, 11, 1) 62.4%);
   border-radius: 5px;
   padding: 7px;
   width: 180px;
- 
+
 }
-.fd-btn2{
+
+.fd-btn2 {
   border-radius: 5px;
   padding: 7px;
   width: 180px;
-  background-image: radial-gradient( circle farthest-corner at 10% 20%,  rgba(249,232,51,1) 0%, rgba(250,196,59,1) 100.2% );
+  background-image: radial-gradient(circle farthest-corner at 10% 20%, rgba(249, 232, 51, 1) 0%, rgba(250, 196, 59, 1) 100.2%);
 }
+
 .fd-rotate {
   animation: fd-rotate 20s linear infinite;
 }
 
 @keyframes fd-rotate {
   from {
-      transform: rotate(0deg);
+    transform: rotate(0deg);
   }
 
   to {
-      transform: rotate(360deg);
+    transform: rotate(360deg);
   }
 }
 
-.fd-img{
-    position: relative;
-    margin-top: -160px;
-    /* margin-left: -100px; */
-    animation: fd-img 20s linear infinite;
+.fd-img {
+  position: relative;
+  margin-top: -160px;
+ 
+  animation: fd-img 20s linear infinite;
 
 }
 
 
-@media screen and (min-width:769px){
-  .fd-img{
+@media screen and (min-width:769px) {
+  .fd-img {
     position: relative;
     margin-top: -160px;
     margin-left: -100px;
     animation: fd-img 20s linear infinite;
 
-}
+  }
 }
 
-@media screen and (min-width:400px) and (max-width:430px){
- 
+@media screen and (min-width:400px) and (max-width:430px) {
+
   .video-bg {
     height: 110%;
   }
-  .video-container::before{
+
+  .video-container::before {
     height: 110%;
   }
 }
 
-@media screen and (max-width:767px){
-  .fd-content{
+@media screen and (max-width:767px) {
+
+  .fd-content {
     color: black !important;
   }
-  .fd-btn{
+
+  .fd-btn {
     background-image: linear-gradient(105.7deg, rgba(255, 64, 65, 1) 45.8%, rgba(255, 10, 11, 1) 62.4%);
     border-radius: 5px;
     padding: 7px;
     width: 100px;
-   
+
   }
-  .fd-btn2{
+
+  .fd-btn2 {
     border-radius: 5px;
     padding: 7px;
     width: 100px;
-    background-image: radial-gradient( circle farthest-corner at 10% 20%,  rgba(249,232,51,1) 0%, rgba(250,196,59,1) 100.2% );
+    background-image: radial-gradient(circle farthest-corner at 10% 20%, rgba(249, 232, 51, 1) 0%, rgba(250, 196, 59, 1) 100.2%);
   }
 }
 
 @keyframes fd-img {
   from {
-      transform: rotate(0deg);
+    transform: rotate(0deg);
   }
 
   to {
-      transform: rotate(-360deg);
+    transform: rotate(-360deg);
   }
 }
 
-.logotxt{
+.logotxt {
   background-image: linear-gradient(105.7deg, rgba(255, 64, 65, 1) 45.8%, rgba(255, 10, 11, 1) 62.4%);
   -webkit-background-clip: text;
   color: transparent;
 }
-.scnd-content{
+
+.scnd-content {
   margin-top: 200px;
 }
-.menu-img{
+
+.menu-img {
   border-radius: 50%;
   box-shadow: 0px 0px 15px black;
-} 
-.prod-btn{
+}
+
+.prod-btn {
   background-image: linear-gradient(105.7deg, rgba(255, 64, 65, 1) 45.8%, rgba(255, 10, 11, 1) 62.4%);
   border-radius: 5px;
   padding: 7px;
   width: 170px;
- 
+
 }
 
-.cart-bg{
+.order-bg {
   background-image: linear-gradient(105.7deg, rgba(255, 64, 65, 1) 45.8%, rgba(255, 10, 11, 1) 62.4%);
 
 }
-.stars i {
-  color: gold;
-  margin-right: 2px;
+
+
+
+/* Styling the active page number button */
+.custom-pagination .page-item.active .page-link {
+  background-image: linear-gradient(105.7deg, rgba(255, 64, 65, 1) 45.8%, rgba(255, 10, 11, 1) 62.4%);
+  color: white;
+  border-color: transparent;
+}
+
+/* Default styles for Previous and Next buttons */
+.custom-pagination .previous .page-link,
+.custom-pagination .next .page-link {
+  background-color: #fff;
+  color:black;
+  border: 1px solid #dee2e6;
+}
+
+.cart-bg {
+  /* background-image: linear-gradient(105.7deg, rgba(255, 64, 65, 1) 45.8%, rgba(255, 10, 11, 1) 62.4%); */
+  backdrop-filter: blur(8px);
+  background: linear-gradient(to bottom,
+      rgba(0, 0, 0, 0) 0%,
+      rgba(0, 0, 0, 0.1) 50%,
+      rgba(0, 0, 0, 0.1) 100%);
+  border: none !important;
+  box-shadow: inset 1px 1px 1px 0 #ddd;
+
 }
 
 
 
-.card-img-top {
- 
-  width: 200px;
-  height: 100px;
-  
+.review-bg {
+
+  backdrop-filter: blur(8px);
+  background: linear-gradient(to bottom,
+      rgba(0, 0, 0, 0.09) 0%,
+      rgba(0, 0, 0, 0.03) 50%,
+      rgba(0, 0, 0, 0) 100%);
+  border: none !important;
+  box-shadow: inset 0 -1px 0 0 #dddddd;
+}
+
+.menu-bg {
+  backdrop-filter: blur(8px);
+  background: linear-gradient(to bottom,
+      rgba(0, 0, 0, 0) 0%,
+      rgba(0, 0, 0, 0.1) 50%,
+      rgba(0, 0, 0, 0) 100%);
+  border: none !important;
+  box-shadow: inset 1px 1px 1px 0 #ddd;
+}
+
+.foot-bg {
+
+  background-image: linear-gradient(105.7deg, rgba(255, 64, 65, 1) 45.8%, rgba(255, 10, 11, 1) 62.4%);
+  width: 100% !important;
+}
+
+.res-bg {
+
+  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.9)),
+    url('https://png.pngtree.com/thumb_back/fw800/background/20230817/pngtree-tables-set-at-a-restaurant-image_13032060.jpg');
+  /* Background image URL */
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 100vw;
+  margin: 0;
+  padding: 50px;
+
+}
+
+.input-even-size {
+  height: 50px;
+  padding: 10px;
+}
+
+.react-datepicker-wrapper,
+.react-datepicker__input-container input {
+  width: 100%;
+  height: 50px;
+}
+
+.lis {
+  list-style: none;
+}
+
+.cart-img {
+  position: relative;
+  z-index: 5;
+
 }
