--- a/src/index.css
+++ b/src/index.css
@@ -172,6 +172,16 @@ html {
 
 }
 
+@media screen  and (min-width:1024px) and (max-width:5000px){
+.prod-img{
+  margin-top: -30px;
+}
+}
+@media screen  and (min-width:768px) and (max-width:1024px){
+  .prod-img{
+    margin-top: 50px;
+  }
+  }
 .order-bg {
   background-image: linear-gradient(105.7deg, rgba(255, 64, 65, 1) 45.8%, rgba(255, 10, 11, 1) 62.4%);
 
